--- a/react-admin/src/components/Intro.css
+++ b/react-admin/src/components/Intro.css
@@ -9,7 +9,7 @@
   padding: 5rem;
 }
 .intro-head{
-  font-family: 'Anton';
+  /* font-family: 'Anton'; */
   letter-spacing: 0.4rem;
   margin-bottom: 3rem;
   text-align: center;
