--- a/react-admin/src/components/Event.css
+++ b/react-admin/src/components/Event.css
@@ -7,7 +7,10 @@
 }
 .Event-head{
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+}
+.head{
+  color:white;
 }
 .side{
   display: flex;
