--- a/react-admin/src/components/Navbar.css
+++ b/react-admin/src/components/Navbar.css
@@ -69,6 +69,7 @@ h3{
   font-family: 'Dosis', sans-serif;
   margin-bottom: 3rem;
   text-align: justify;
+  line-height: 2.8rem;
 }
 #dash-btn{
   background: #9f49a9;
